--- a/css/styles.css
+++ b/css/styles.css
@@ -48,30 +48,6 @@ ul li{
     padding: 0px 10px;
     padding-right: 20px;
 }
-button{
-    padding: 20px;
-    width: 150px;
-    background-color: #1f8a70;
-    border-radius: 15%;
-    border: none;
-}
-
-button a{  
-  font-family: 'Poppins', sans-serif;
-  font-size:20px;
-  text-decoration: none;
-  color: #eff5f5;
-}
-
-button a:hover{
-    color: #00425a;
-}
-button{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-} 
 img {
     width: 100%;
     padding: 10px;
@@ -99,11 +75,11 @@ img {
   text-align: center;
 }
 
-.container-proped {
+.container-propuestaeducativa {
   width: 80%;
   height: auto;
   background-color:#ffcda4;
-  color: #6e8181;
+  color: #1c1d1d;
   padding: 10%;
   align-items: center;
   text-align: center;
