--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ img {
   color: #343d3d;
   padding: 10%;
   align-items: center;
-  text-align: left;
+  text-align: center;
 }
 
 .container-elegirnos {
